logs/server.log
{ error:
   E:\gitHub\server_abb\routes\src\handler.js:5
     _child;
           ^
   
   SyntaxError: Unexpected token ;
       at Module._compile (internal/modules/cjs/loader.js:723:23)
       at Object.Module._extensions..js (internal/modules/cjs/loader.js:789:10)
       at Module.load (internal/modules/cjs/loader.js:653:32)
       at tryModuleLoad (internal/modules/cjs/loader.js:593:12)
       at Function.Module._load (internal/modules/cjs/loader.js:585:3)
       at Module.require (internal/modules/cjs/loader.js:692:17)
       at require (internal/modules/cjs/helpers.js:25:18)
       at Object.<anonymous> (E:\gitHub\server_abb\routes\api.js:9:15)
       at Module._compile (internal/modules/cjs/loader.js:778:30)
       at Object.Module._extensions..js (internal/modules/cjs/loader.js:789:10),
  level: 'error',
  message:
   'uncaughtException: Unexpected token ;\nE:\\gitHub\\server_abb\\routes\\src\\handler.js:5\n  _child;\n        ^\n\nSyntaxError: Unexpected token ;\n    at Module._compile (internal/modules/cjs/loader.js:723:23)\n    at Object.Module._extensions..js (internal/modules/cjs/loader.js:789:10)\n    at Module.load (internal/modules/cjs/loader.js:653:32)\n    at tryModuleLoad (internal/modules/cjs/loader.js:593:12)\n    at Function.Module._load (internal/modules/cjs/loader.js:585:3)\n    at Module.require (internal/modules/cjs/loader.js:692:17)\n    at require (internal/modules/cjs/helpers.js:25:18)\n    at Object.<anonymous> (E:\\gitHub\\server_abb\\routes\\api.js:9:15)\n    at Module._compile (internal/modules/cjs/loader.js:778:30)\n    at Object.Module._extensions..js (internal/modules/cjs/loader.js:789:10)',
  stack:
   'E:\\gitHub\\server_abb\\routes\\src\\handler.js:5\n  _child;\n        ^\n\nSyntaxError: Unexpected token ;\n    at Module._compile (internal/modules/cjs/loader.js:723:23)\n    at Object.Module._extensions..js (internal/modules/cjs/loader.js:789:10)\n    at Module.load (internal/modules/cjs/loader.js:653:32)\n    at tryModuleLoad (internal/modules/cjs/loader.js:593:12)\n    at Function.Module._load (internal/modules/cjs/loader.js:585:3)\n    at Module.require (internal/modules/cjs/loader.js:692:17)\n    at require (internal/modules/cjs/helpers.js:25:18)\n    at Object.<anonymous> (E:\\gitHub\\server_abb\\routes\\api.js:9:15)\n    at Module._compile (internal/modules/cjs/loader.js:778:30)\n    at Object.Module._extensions..js (internal/modules/cjs/loader.js:789:10)',
  exception: true,
  date: 'Sat Oct 26 2019 21:25:05 GMT+0300 (GMT+03:00)',
  process:
   { pid: 18876,
     uid: null,
     gid: null,
     cwd: 'E:\\gitHub\\server_abb',
     execPath: 'E:\\gitHub\\server_abb\\node_modules\\node\\bin\\node.exe',
     version: 'v10.16.3',
     argv:
      [ 'E:\\gitHub\\server_abb\\node_modules\\node\\bin\\node.exe',
        'E:\\gitHub\\server_abb\\app.js' ],
     memoryUsage:
      { rss: 33665024,
        heapTotal: 21741568,
        heapUsed: 11200992,
        external: 158127 } },
  os: { loadavg: [ 0, 0, 0 ], uptime: 181266 },
  trace:
   [ { column: 23,
       file: 'internal/modules/cjs/loader.js',
       function: 'Module._compile',
       line: 723,
       method: '_compile',
       native: false },
     { column: 10,
       file: 'internal/modules/cjs/loader.js',
       function: 'Module._extensions..js',
       line: 789,
       method: '.js',
       native: false },
     { column: 32,
       file: 'internal/modules/cjs/loader.js',
       function: 'Module.load',
       line: 653,
       method: 'load',
       native: false },
     { column: 12,
       file: 'internal/modules/cjs/loader.js',
       function: 'tryModuleLoad',
       line: 593,
       method: null,
       native: false },
     { column: 3,
       file: 'internal/modules/cjs/loader.js',
       function: 'Module._load',
       line: 585,
       method: '_load',
       native: false },
     { column: 17,
       file: 'internal/modules/cjs/loader.js',
       function: 'Module.require',
       line: 692,
       method: 'require',
       native: false },
     { column: 18,
       file: 'internal/modules/cjs/helpers.js',
       function: 'require',
       line: 25,
       method: null,
       native: false },
     { column: 15,
       file: 'E:\\gitHub\\server_abb\\routes\\api.js',
       function: null,
       line: 9,
       method: null,
       native: false },
     { column: 30,
       file: 'internal/modules/cjs/loader.js',
       function: 'Module._compile',
       line: 778,
       method: '_compile',
       native: false },
     { column: 10,
       file: 'internal/modules/cjs/loader.js',
       function: 'Module._extensions..js',
       line: 789,
       method: '.js',
       native: false } ],
  label: 'E:\\gitHub\\server_abb\\routes\\api.js',
  timestamp: '2019-10-26T18:25:05.239Z' }
